--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -31,16 +31,16 @@
   <div class="row wow fadeInUp" data-wow-delay="0.6s">
     <div class="col-8 " style="margin: auto">
       <div class="row">
-        <div class="col text-center hoverable rounded m-1 waves-light" routerLink="/men" mdbWavesEffect><img class="img-responsive mt-2 circular  " src="../assets/images/men.jpg" /><h3 class="text-center text-muted mt-3">Mens</h3></div>
-        <div class="col text-center hoverable rounded m-1" routerLink="/women" ><img class="img-responsive mt-2 circular " src="../assets/images/women.jpg" /><h3 class="text-center text-muted mt-3">Womens</h3></div>
-        <div class="col text-center hoverable rounded m-1" routerLink="/kids"><img class="img-responsive mt-2 circular " src="../assets/images/kids.jpg"  /><h3 class="text-center text-muted mt-3">Kids</h3></div>
+        <div class="col text-center hoverable rounded m-1 waves-light" routerLink="men" mdbWavesEffect><img class="img-responsive mt-2 circular  " src="../assets/images/men.jpg" /><h3 class="text-center text-muted mt-3">Mens</h3></div>
+        <div class="col text-center hoverable rounded m-1" routerLink="women" ><img class="img-responsive mt-2 circular " src="../assets/images/women.jpg" /><h3 class="text-center text-muted mt-3">Womens</h3></div>
+        <div class="col text-center hoverable rounded m-1" routerLink="kids"><img class="img-responsive mt-2 circular " src="../assets/images/kids.jpg"  /><h3 class="text-center text-muted mt-3">Kids</h3></div>
       </div>
       
         <br>
       <div class="row wow fadeInUp" data-wow-delay="0.6s">
-          <div class="col text-center hoverable rounded m-1" routerLink="/footwear"><img class="img-responsive mt-2 circular" src="../assets/images/footwear.jpg" /><h3 class="text-center text-muted mt-3">Footwear</h3></div>
-          <div class="col text-center hoverable rounded m-1" routerLink="/grocery"><img class="img-responsive mt-2 circular" src="../assets/images/grocery.jpg" /><h3 class="text-center text-muted mt-3">Grocery</h3></div>
-          <div class="col text-center hoverable rounded m-1" routerLink="/electronics"><img class="img-responsive mt-2 circular" src="../assets/images/headphones.jpg"  /><h3 class="text-center text-muted mt-3">Electronics</h3></div>
+          <div class="col text-center hoverable rounded m-1" routerLink="footwear"><img class="img-responsive mt-2 circular" src="../assets/images/footwear.jpg" /><h3 class="text-center text-muted mt-3">Footwear</h3></div>
+          <div class="col text-center hoverable rounded m-1" routerLink="grocery"><img class="img-responsive mt-2 circular" src="../assets/images/grocery.jpg" /><h3 class="text-center text-muted mt-3">Grocery</h3></div>
+          <div class="col text-center hoverable rounded m-1" routerLink="electronics"><img class="img-responsive mt-2 circular" src="../assets/images/headphones.jpg"  /><h3 class="text-center text-muted mt-3">Electronics</h3></div>
       </div>
       <br>
       
