--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
 
   <mdb-navbar-brand>
         <img src="../assets/images/logo.jpg" height="40" alt="">  
-    <a class="navbar-brand ml-2" href="#"> DEALMART</a></mdb-navbar-brand>
+    <a class="navbar-brand ml-2" > DEALMART</a></mdb-navbar-brand>
 
   <links>
 
