--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="page-footer font-small  pt-4" style="background-color:rgb(204, 203, 203);color: rgb(3, 3, 3)">
+<footer class="page-footer font-small  pt-4" style="background-color:#f2f2f2 ;color: #030303">
 <div class="col-8" style="margin:auto">
     <div class="container-fluid text-center text-md-left">
 
@@ -58,12 +58,10 @@
       </div>
     </div>
     </div>
-    <div class="row d-flex align-items-center grey pt-2">
+    <div class="row d-flex align-items-center pt-2" style="background-color:#e0e0e0">
 
-        <!-- Grid column -->
         <div class="col-md-7 col-lg-8 ">
 
-          <!--Copyright-->
           <p class="text-center text-md-left">© 2018 Copyright:
             <a href="https://mdbootstrap.com/education/bootstrap/">
               <strong> MDBootstrap.com</strong>
@@ -71,12 +69,9 @@
           </p>
 
         </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
+       
         <div class="col-md-5 col-lg-4 ml-lg-0">
 
-          <!-- Social buttons -->
           <div class="text-center text-md-right">
             <ul class="list-unstyled list-inline">
               <li class="list-inline-item">
@@ -103,7 +98,6 @@
           </div>
 
         </div>
-        <!-- Grid column -->
 
       </div>
 
