--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -6,3 +6,8 @@
     margin-right: 0px;
     margin-left: 0px;
 }
+.user{
+    padding: 0rem 1rem 0rem 1rem;
+    border-right: 1px solid #dcdcdd;
+    border-left: 1px solid #dcdcdd;
+}
