--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
 
   <mdb-navbar-brand>
         <img src="../assets/images/logo.jpg" height="40" alt="">  
-    <a class="navbar-brand ml-2" > DEALMART</a></mdb-navbar-brand>
+    <a class="navbar-brand ml-2" routerLink="/" > DEALMART</a></mdb-navbar-brand>
 
   <links>
 
@@ -24,10 +24,10 @@
             </li>
 
           <li class="nav-item dropdown" dropdown>
-              <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
+              <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect (click)= "onload()">
               Electronics<span class="caret"></span></a>
               <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
-                  <a class="dropdown-item waves-light" mdbWavesEffect href="#">Action</a>
+                  <a class="dropdown-item waves-light" mdbWavesEffect >hj</a>
                   <a class="dropdown-item waves-light" mdbWavesEffect href="#">Another action</a>
                   <a class="dropdown-item waves-light" mdbWavesEffect href="#">Something else here</a>
                   <div class="divider dropdown-divider"></div>
@@ -39,9 +39,23 @@
 
       <form class="form-inline waves-light" mdbWavesEffect>
           <div class="md-form my-0">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search">
+              <input class="form-control mr-sm-2 p-1" type="text" placeholder=" Search">
           </div>
       </form>
+      <div class="dropdown nav-item" dropdown>
+      <a type="button" class="grey-text user dropdown-toggle" dropdownToggle>
+            <i class="fas fa-user-alt fa-lg "></i>
+      </a>
+      <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+            <a class="dropdown-item waves-light" mdbWavesEffect routerLink="signup">SignUp</a>
+            <div class="divider dropdown-divider"></div>
+            <a class="dropdown-item waves-light" mdbWavesEffect routerLink="signin">Login</a>
+        </div>
+    </div>
+
+      <a type="button" class="grey-text">
+            <i class="fas fa-shopping-cart fa-lg pl-2"></i>
+      </a>
   </links>
 
 </mdb-navbar>
