--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -5,23 +5,23 @@
   <p class="h2 mb-4">SIGN UP</p>
 
   <div class="form-group">
-  <input type="text" id="username" name="username" ngModel class="form-control mb-4" placeholder="Username">
+  <input type="text" id="username" name="username" ngModel class="form-control mb-4" placeholder="Username" required>
   </div>
 
   <div class="form-group">
-  <input type="email" id="email" class="form-control mb-4" placeholder="E-mail" name="email" ngModel>
+  <input type="email" id="email" class="form-control mb-4" placeholder="E-mail" name="email" ngModel email required>
   </div>
   <div class="form-group">
-  <input type="password" id="password" class="form-control" placeholder="Password" name='password' ngModel>
+  <input type="password" id="password" class="form-control" placeholder="Password" name='password' ngModel required>
   </div>
   <small class="form-text text-muted mb-4">
     At least 8 characters and 1 digit
   </small>
   <div class="form-group">
-  <input type="confirm_password" class="form-control" placeholder="Confirm Password" name='confirm_password'  ngModel >
+  <input type="confirm_password" class="form-control" placeholder="Confirm Password" name='confirm_password'  ngModel required>
   </div>
 
-  <button mdbBtn color="info" block="true" class="my-4" type="submit">Sign Up</button>
+  <button mdbBtn color="info" block="true" class="my-4" type="submit" [disabled]='!f.valid'>Sign Up</button>
 
   <p>or sign up with:</p>
   <a type="button" class="light-blue-text mx-2">
@@ -42,8 +42,8 @@
 
   <p>By clicking
     <em>Sign up</em> you agree to our
-    <a href="" target="_blank">terms of service</a> and
-    <a href="" target="_blank">terms of service</a>. </p>
+    <a href="" target="_blank">Terms</a> and
+    <a href="" target="_blank">tCondition</a>. </p>
 
 </form>
   </div>
