added logout button and authorisation

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -3,19 +3,19 @@
 <mdb-carousel class="carousel slide carousel-fade mt-2"  [animation]="'fade'">
   <mdb-carousel-item>
     <div class="view w-100">
-      <img class="d-block w-100" src="../assets/images/adidas.jpg" alt="First slide">
+      <img class="d-block w-100" src="../assets/images/c1.jpg" alt="First slide">
       <div class="mask waves-light" mdbWavesEffect></div>
     </div>
   </mdb-carousel-item>
   <mdb-carousel-item>
     <div class="view w-100">
-      <img class="d-block w-100" src="../assets/images/menss.jpg" alt="Second slide">
+      <img class="d-block w-100" src="../assets/images/c2.jpg" alt="Second slide">
       <div class="mask waves-light" mdbWavesEffect></div>
     </div>
   </mdb-carousel-item>
   <mdb-carousel-item>
     <div class="view w-100">
-      <img class="d-block w-100" src="../assets/images/adidas.jpg" alt="Third slide">
+      <img class="d-block w-100" src="../assets/images/c3.jpg" alt="Third slide">
       <div class="mask waves-light" mdbWavesEffect></div>
     </div>
   </mdb-carousel-item>
@@ -32,7 +32,7 @@
     <div class="col-8 " style="margin: auto">
       <div class="row">
         <div class="col text-center hoverable rounded m-1 waves-light" routerLink="men" mdbWavesEffect><img class="img-responsive mt-2 circular  " src="../assets/images/men.jpg" /><h3 class="text-center text-muted mt-3">Mens</h3></div>
-        <div class="col text-center hoverable rounded m-1" routerLink="women" ><img class="img-responsive mt-2 circular " src="../assets/images/women.jpg" /><h3 class="text-center text-muted mt-3">Womens</h3></div>
+        <div class="col text-center hoverable rounded m-1" routerLink="women" ><img class="img-responsive mt-2 circular  " src="../assets/images/women.jpg" /><h3 class="text-center text-muted mt-3">Womens</h3></div>
         <div class="col text-center hoverable rounded m-1" routerLink="kids"><img class="img-responsive mt-2 circular " src="../assets/images/kids.jpg"  /><h3 class="text-center text-muted mt-3">Kids</h3></div>
       </div>
       
@@ -48,5 +48,5 @@
     </div>
   </div>
 <div class="row text-center">
-  <img class="img-responsive mt-5 sports wow fadeInUp" data-wow-delay="0.6s" src="../assets/images/sports.png" routerLink="/sports"/>
-  <img class="img-responsive mt-5 beauty text-center wow fadeInUp" data-wow-delay="0.6s"src="../assets/images/beauty.png" routerLink="/cosmetics"/></div>
+  <img class="img-responsive mt-5 sports wow fadeInUp img-fluid" data-wow-delay="0.6s" src="../assets/images/sports.png" routerLink="/sports"/>
+  <img class="img-responsive mt-5 beauty text-center wow fadeInUp img-fluid" data-wow-delay="0.6s"src="../assets/images/beauty.png" routerLink="/cosmetics"/></div>
