--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,36 +7,71 @@
   <links>
 
       <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-              <a class="nav-link waves-light" mdbWavesEffect>Men<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link waves-light" mdbWavesEffect>Women</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link waves-light" mdbWavesEffect>Kids</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link waves-light" mdbWavesEffect>Sports</a>
-          </li>
-          <li class="nav-item">
-                <a class="nav-link waves-light" mdbWavesEffect>Books</a>
-            </li>
-            <li class="nav-item" *ngIf="isAdminLoggedIn" >
-                <a class="nav-link waves-light" mdbWavesEffect>Booksmm</a>
+            <li class="nav-item dropdown" dropdown>
+                <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect (click)= "onmen('men')">
+                Mens<span class="caret"></span></a>
+                <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+                <div  *ngFor="let i of id;" >
+                    <a class="dropdown-item waves-light" mdbWavesEffect routerLink="{{ i.subcategory }}"><strong>{{ i.subcategory }}</strong></a>
+                    <a class="dropdown-item waves-light"  *ngFor="let j of i.subsubcategory;" routerLink="{{ j.subsubcategory }}">  {{ j.subsubcategory }}</a>
+                </div>
+                </div>
             </li>
 
-          <li class="nav-item dropdown" dropdown>
-              <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect (click)= "onload()">
-              Electronics<span class="caret"></span></a>
-              <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
-                  <a class="dropdown-item waves-light" mdbWavesEffect *ngFor="let i of id;">{{ i+1 }}</a>
-                  <a class="dropdown-item waves-light" mdbWavesEffect href="#">Another action</a>
-                  <a class="dropdown-item waves-light" mdbWavesEffect href="#">Something else here</a>
-                  <div class="divider dropdown-divider"></div>
-                  <a class="dropdown-item waves-light" mdbWavesEffect href="#">Separated link</a>
-              </div>
-          </li>
+            <li class="nav-item dropdown" dropdown>
+                <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect (click)= "onmen('women')">
+                Womens<span class="caret"></span></a>
+                <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+                <div  *ngFor="let i of id;" >
+                    <a class="dropdown-item waves-light" mdbWavesEffect><strong>{{ i.subcategory }}</strong></a>
+                    <a class="dropdown-item waves-light"  *ngFor="let j of i.subsubcategory;">  {{ j.subsubcategory }}</a>
+                </div>
+                </div>
+            </li>
+
+            <li class="nav-item dropdown" dropdown>
+                    <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect (click)= "onmen('kids')">
+                    Kids<span class="caret"></span></a>
+                    <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+                    <div  *ngFor="let i of id;" >
+                        <a class="dropdown-item waves-light" mdbWavesEffect><strong>{{ i.subcategory }}</strong></a>
+                        <a class="dropdown-item waves-light"  *ngFor="let j of i.subsubcategory;">  {{ j.subsubcategory }}</a>
+                    </div>
+                    </div>
+            </li>
+
+            <li class="nav-item dropdown" dropdown>
+                    <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect (click)= "onmen('electronics')">
+                    Electronics<span class="caret"></span></a>
+                    <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+                    <div  *ngFor="let i of id;" >
+                        <a class="dropdown-item waves-light" mdbWavesEffect><strong>{{ i.subcategory }}</strong></a>
+                        <a class="dropdown-item waves-light"  *ngFor="let j of i.subsubcategory;">  {{ j.subsubcategory }}</a>
+                    </div>
+                    </div>
+            </li>
+
+            <li class="nav-item dropdown" dropdown>
+                    <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect (click)= "onmen('sports')">
+                    Sports<span class="caret"></span></a>
+                    <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+                    <div  *ngFor="let i of id;" >
+                        <a class="dropdown-item waves-light" mdbWavesEffect><strong>{{ i.subcategory }}</strong></a>
+                        <a class="dropdown-item waves-light"  *ngFor="let j of i.subsubcategory;"> {{ j.subsubcategory }}</a>
+                    </div>
+                    </div>
+            </li>
+
+            <li class="nav-item dropdown" dropdown>
+                    <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect (click)= "onmen('books')">
+                    Books<span class="caret"></span></a>
+                    <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+                    <div  *ngFor="let i of id;" >
+                        <a class="dropdown-item waves-light" mdbWavesEffect><strong>{{ i.subcategory }}</strong></a>
+                        <a class="dropdown-item waves-light"  *ngFor="let j of i.subsubcategory;">  {{ j.subsubcategory }}</a>
+                    </div>
+                    </div>
+            </li>
 
       </ul>
       <form class="form-inline waves-light" mdbWavesEffect>
@@ -47,8 +82,9 @@
 
       <div class="dropdown nav-item" dropdown>
       <a type="button" class="grey-text user dropdown-toggle" dropdownToggle>
-            <i class="fas fa-user-alt fa-lg "></i>
+             <i class="fas fa-user-alt fa-lg "></i>
       </a>
+
       <ng-template [ngIf]="!isAdminLoggedIn">
       <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu" >
             <a class="dropdown-item waves-light" mdbWavesEffect routerLink="signup">SignUp</a>
@@ -56,11 +92,12 @@
             <a class="dropdown-item waves-light" mdbWavesEffect routerLink="signin">Login</a>
       </div>
       </ng-template>
+
       <ng-template [ngIf]="isAdminLoggedIn">
       <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu" >
         <a class="dropdown-item waves-light" mdbWavesEffect routerLink="myprofile">My Profile</a>
         <div class="divider dropdown-divider"></div>
-        <a class="dropdown-item waves-light" mdbWavesEffect routerLink="logout" (click)="logout()">Logout</a>
+        <a class="dropdown-item waves-light" mdbWavesEffect (click)="logout()">Logout</a>
       </div>
     </ng-template>
     </div>
