--- a/src/app/show/show.component.html
+++ b/src/app/show/show.component.html
@@ -2,6 +2,7 @@
   <br>
 <h2> <strong> {{ cat }}</strong> </h2>
 <hr>
+<button (click)='show()'>showww</button>
 <div class="row mt-5 mb-5" >
 
     <div class="col-3 mt-3 zoom" >
@@ -16,6 +17,7 @@
             <mdb-card-title>
               <h4>Etables</h4>
             </mdb-card-title>
+
         
         
             <p class="text-muted">+ Shop Now</p>
@@ -61,7 +63,7 @@
           <div class="col-3 mt-3 zoom" >
               <mdb-card>
                   <div class="view rgba-white-slight waves-light" mdbWavesEffect>
-                    <mdb-card-img src="../assets/images/sq1.jpg" alt="Card image cap"></mdb-card-img>
+                    <mdb-card-img src="../assets/images/sq2.jpg" alt="Card image cap"></mdb-card-img>
                     <a>
                       <div class="mask"></div>
                     </a>
@@ -79,7 +81,7 @@
               <div class="col-3 mt-3 zoom" >
                   <mdb-card>
                       <div class="view rgba-white-slight waves-light" mdbWavesEffect>
-                        <mdb-card-img src="../assets/images/sq1.jpg" alt="Card image cap"></mdb-card-img>
+                        <mdb-card-img src="../assets/images/sq4.jpg" alt="Card image cap"></mdb-card-img>
                         <a>
                           <div class="mask"></div>
                         </a>
