--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,24 +1,31 @@
-<div class="row">
-  <div class="col-6">
-      <mdb-carousel class="carousel slide carousel-fade mt-2"  [animation]="'fade'">
+<br>
+<div class="row" >
+  <div class="col-5" style="margin:auto">
+      <mdb-carousel class="carousel slide carousel-fade mt-2" >
           <mdb-carousel-item>
             <div class="view w-100">
-              <img class="d-block w-100" src="../assets/images/c1.jpg" alt="First slide">
+              <img class="d-block w-100 pro" src="../assets/images/sq1.jpg" alt="First slide">
               <div class="mask waves-light" mdbWavesEffect></div>
             </div>
           </mdb-carousel-item>
           <mdb-carousel-item>
             <div class="view w-100">
-              <img class="d-block w-100" src="../assets/images/c2.jpg" alt="Second slide">
+              <img class="d-block w-100 pro" src="../assets/images/sq2.jpg" alt="Second slide">
               <div class="mask waves-light" mdbWavesEffect></div>
             </div>
           </mdb-carousel-item>
           <mdb-carousel-item>
             <div class="view w-100">
-              <img class="d-block w-100" src="../assets/images/c3.jpg" alt="Third slide">
+              <img class="d-block w-100 pro" src="../assets/images/sq3.jpg" alt="Third slide">
               <div class="mask waves-light" mdbWavesEffect></div>
             </div>
           </mdb-carousel-item>
         </mdb-carousel>
   </div>
+  <div class="col-5" style="margin:0 auto;float: none">
+    <h2>roadster black t-shirt</h2>
+    <hr>
+  </div>
 </div>
+<br>
+<br>
