--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -18,7 +18,7 @@
     At least 8 characters and 1 digit
   </small>
   <div class="form-group">
-  <input type="confirm_password" class="form-control" placeholder="Confirm Password" name='confirm_password'  ngModel required>
+  <input type="password" class="form-control" placeholder="Confirm Password" name='confirm_password'  ngModel required>
   </div>
 
   <button mdbBtn color="info" block="true" class="my-4" type="submit" [disabled]='!f.valid'>Sign Up</button>
