--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,8 +15,8 @@
                 
                 
                 <tr  *ngFor="let i of id;" mdbTableCol ><td style="float:left">
-                    <a class="dropdown-item waves-light" mdbWavesEffect routerLink="{{ i.subcategory }}" ><strong>{{ i.subcategory }}</strong></a>
-                    <a class="dropdown-item waves-light"  *ngFor="let j of i.subsubcategory;" (click)="products(j.subsubcategory)"> {{ j.subsubcategory }}</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect routerLink="{{ i.subcategory }}" (click)="product(i.subcategory,'men')"><strong>{{ i.subcategory }}</strong></a>
+                    <a class="dropdown-item waves-light"  *ngFor="let j of i.subsubcategory;" (click)="product(j.subsubcategory,'men')"> {{ j.subsubcategory }}</a>
                 </td>
                 </tr>
                 
@@ -29,62 +29,98 @@
                 <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect (click)= "onmen('women')">
                 Womens<span class="caret"></span></a>
                 <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
-                <div  *ngFor="let i of id;" >
-                    <a class="dropdown-item waves-light" mdbWavesEffect><strong>{{ i.subcategory }}</strong></a>
-                    <a class="dropdown-item waves-light"  *ngFor="let j of i.subsubcategory;">  {{ j.subsubcategory }}</a>
+                <table mdbTable>
+                
+                
+                <tr  *ngFor="let i of id;" mdbTableCol ><td style="float:left">
+                    <a class="dropdown-item waves-light" mdbWavesEffect routerLink="{{ i.subcategory }}" (click)="product(i.subcategory,'women')"><strong>{{ i.subcategory }}</strong></a>
+                    <a class="dropdown-item waves-light"  *ngFor="let j of i.subsubcategory;" (click)="product(j.subsubcategory,'women')"> {{ j.subsubcategory }}</a>
+                </td>
+                </tr>
+                
+                
+                </table>
                 </div>
+            </li>
+
+            <li class="nav-item dropdown" dropdown>
+                <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect (click)= "onmen('kids')">
+                Kids<span class="caret"></span></a>
+                <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+                <table mdbTable>
+                
+                
+                <tr  *ngFor="let i of id;" mdbTableCol ><td style="float:left">
+                    <a class="dropdown-item waves-light" mdbWavesEffect routerLink="{{ i.subcategory }}" (click)="product(i.subcategory,'kids')"><strong>{{ i.subcategory }}</strong></a>
+                    <a class="dropdown-item waves-light"  *ngFor="let j of i.subsubcategory;" (click)="product(j.subsubcategory,'kids')"> {{ j.subsubcategory }}</a>
+                </td>
+                </tr>
+                
+
+                </table>
                 </div>
             </li>
 
             <li class="nav-item dropdown" dropdown>
-                    <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect (click)= "onmen('kids')">
-                    Kids<span class="caret"></span></a>
-                    <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
-                    <div  *ngFor="let i of id;" >
-                        <a class="dropdown-item waves-light" mdbWavesEffect><strong>{{ i.subcategory }}</strong></a>
-                        <a class="dropdown-item waves-light"  *ngFor="let j of i.subsubcategory;">  {{ j.subsubcategory }}</a>
-                    </div>
-                    </div>
+                <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect (click)= "onmen('electronics')">
+                Electronics<span class="caret"></span></a>
+                <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+                <table mdbTable>
+                
+                
+                <tr  *ngFor="let i of id;" mdbTableCol ><td style="float:left">
+                    <a class="dropdown-item waves-light" mdbWavesEffect routerLink="{{ i.subcategory }}" (click)="product(i.subcategory,'electronics')"><strong>{{ i.subcategory }}</strong></a>
+                    <a class="dropdown-item waves-light"  *ngFor="let j of i.subsubcategory;" (click)="product(j.subsubcategory,'electronics')"> {{ j.subsubcategory }}</a>
+                </td>
+                </tr>
+                
+                
+                </table>
+                </div>
             </li>
 
             <li class="nav-item dropdown" dropdown>
-                    <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect (click)= "onmen('electronics')">
-                    Electronics<span class="caret"></span></a>
-                    <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
-                    <div  *ngFor="let i of id;" >
-                        <a class="dropdown-item waves-light" mdbWavesEffect><strong>{{ i.subcategory }}</strong></a>
-                        <a class="dropdown-item waves-light"  *ngFor="let j of i.subsubcategory;">  {{ j.subsubcategory }}</a>
-                    </div>
-                    </div>
+                <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect (click)= "onmen('sports')">
+                Sports<span class="caret"></span></a>
+                <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+                <table mdbTable>
+                
+                
+                <tr  *ngFor="let i of id;" mdbTableCol ><td style="float:left">
+                    <a class="dropdown-item waves-light" mdbWavesEffect routerLink="{{ i.subcategory }}" (click)="product(i.subcategory,'sports')"><strong>{{ i.subcategory }}</strong></a>
+                    <a class="dropdown-item waves-light"  *ngFor="let j of i.subsubcategory;" (click)="product(j.subsubcategory,'sports')"> {{ j.subsubcategory }}</a>
+                </td>
+                </tr>
+                
+                
+                </table>
+                </div>
             </li>
 
             <li class="nav-item dropdown" dropdown>
-                    <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect (click)= "onmen('sports')">
-                    Sports<span class="caret"></span></a>
-                    <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
-                    <div  *ngFor="let i of id;" >
-                        <a class="dropdown-item waves-light" mdbWavesEffect><strong>{{ i.subcategory }}</strong></a>
-                        <a class="dropdown-item waves-light"  *ngFor="let j of i.subsubcategory;"> {{ j.subsubcategory }}</a>
-                    </div>
-                    </div>
-            </li>
-
-            <li class="nav-item dropdown" dropdown>
-                    <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect (click)= "onmen('books')">
-                    Books<span class="caret"></span></a>
-                    <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
-                    <div  *ngFor="let i of id;" >
-                        <a class="dropdown-item waves-light" mdbWavesEffect><strong>{{ i.subcategory }}</strong></a>
-                        <a class="dropdown-item waves-light"  *ngFor="let j of i.subsubcategory;">  {{ j.subsubcategory }}</a>
-                    </div>
-                    </div>
+                <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect (click)= "onmen('books')">
+                Books<span class="caret"></span></a>
+                <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+                <table mdbTable>
+                
+                
+                <tr  *ngFor="let i of id;" mdbTableCol ><td style="float:left">
+                    <a class="dropdown-item waves-light" mdbWavesEffect routerLink="{{ i.subcategory }}" (click)="product(i.subcategory,'books')"><strong>{{ i.subcategory }}</strong></a>
+                    <a class="dropdown-item waves-light"  *ngFor="let j of i.subsubcategory;" (click)="product(j.subsubcategory,'books')"> {{ j.subsubcategory }}</a>
+                </td>
+                </tr>
+                
+                
+                </table>
+                </div>
             </li>
 
       </ul>
-      <form class="form-inline waves-light" mdbWavesEffect>
+      <form class="form-inline waves-light" mdbWavesEffect (ngSubmit)="searchproducts(f,'')" #f="ngForm">
           <div class="md-form my-0">
-              <input class="form-control mr-sm-2 p-1" type="text" placeholder=" Search">
+              <input class="form-control mr-sm-2 p-1" type="text" placeholder=" Search" name="search" ngModel #search>
           </div>
+          <button mdBtn type="submit">search</button>
       </form>
 
       <div class="dropdown nav-item" dropdown>
