--- a/src/app/footwear/footwear.component.html
+++ b/src/app/footwear/footwear.component.html
@@ -3,7 +3,7 @@
       <mdb-carousel class="carousel slide carousel-fade mt-2"  [animation]="'fade'">
         <mdb-carousel-item>
           <div class="view w-100">
-            <img class="d-block w-100" src="../assets/images/c14.jpg" alt="First slide">
+            <img class="d-block w-100" src="../assets/images/c3.jpg" alt="First slide">
             <div class="mask waves-light" mdbWavesEffect></div>
           </div>
         </mdb-carousel-item>
@@ -14,14 +14,14 @@
   <div class="col-3 mt-3 zoom" style="margin:auto">
     <mdb-card>
         <div class="view rgba-white-slight waves-light" mdbWavesEffect>
-          <mdb-card-img src="../assets/images/mobile.png" alt="Card image cap"></mdb-card-img>
+          <mdb-card-img src="../assets/images/men_shoes.jpg" alt="Card image cap"></mdb-card-img>
           <a>
             <div class="mask"></div>
           </a>
         </div>
         <mdb-card-body>
           <mdb-card-title>
-            <h4>Accessories</h4>
+            <h4>Mens Footwear</h4>
           </mdb-card-title>
       
       
@@ -32,14 +32,14 @@
     <div class="col-3 mt-3 zoom" style="margin:auto">
       <mdb-card>
           <div class="view rgba-white-slight waves-light" mdbWavesEffect>
-            <mdb-card-img src="../assets/images/home_app.png" alt="Card image cap"></mdb-card-img>
+            <mdb-card-img src="../assets/images/women_shoes.jpg" alt="Card image cap"></mdb-card-img>
             <a>
               <div class="mask"></div>
             </a>
           </div>
           <mdb-card-body>
             <mdb-card-title>
-              <h4>Home Appliances</h4>
+              <h4>Women Footwear</h4>
             </mdb-card-title>
         
             <p class="text-muted">+ Shop Now</p>
@@ -50,14 +50,14 @@
       <div class="col-3 mt-3 zoom" style="margin:auto">
         <mdb-card>
             <div class="view rgba-white-slight waves-light" mdbWavesEffect>
-              <mdb-card-img src="../assets/images/headphone.jpg" alt="Card image cap"></mdb-card-img>
+              <mdb-card-img src="../assets/images/kids_shoes.jpg" alt="Card image cap"></mdb-card-img>
               <a>
                 <div class="mask"></div>
               </a>
             </div>
             <mdb-card-body>
               <mdb-card-title>
-                <h4>Gadgets</h4>
+                <h4>Kids footwear</h4>
               </mdb-card-title>
           
               <p class="text-muted">+ Shop Now</p>
