--- a/src/app/cosmetics/cosmetics.component.html
+++ b/src/app/cosmetics/cosmetics.component.html
@@ -3,19 +3,7 @@
       <mdb-carousel class="carousel slide carousel-fade mt-2"  [animation]="'fade'">
         <mdb-carousel-item>
           <div class="view w-100">
-            <img class="d-block w-100" src="../assets/images/adidas.jpg" alt="First slide">
-            <div class="mask waves-light" mdbWavesEffect></div>
-          </div>
-        </mdb-carousel-item>
-        <mdb-carousel-item>
-          <div class="view w-100">
-            <img class="d-block w-100" src="../assets/images/menss.jpg" alt="Second slide">
-            <div class="mask waves-light" mdbWavesEffect></div>
-          </div>
-        </mdb-carousel-item>
-        <mdb-carousel-item>
-          <div class="view w-100">
-            <img class="d-block w-100" src="../assets/images/adidas.jpg" alt="Third slide">
+            <img class="d-block w-100" src="../assets/images/c13.jpg" alt="First slide">
             <div class="mask waves-light" mdbWavesEffect></div>
           </div>
         </mdb-carousel-item>
