--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
                 <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
                 <table mdbTable>
                 
-                
+            
                 <tr  *ngFor="let i of id;" mdbTableCol ><td style="float:left">
                     <a class="dropdown-item waves-light" mdbWavesEffect routerLink="{{ i.subcategory }}" (click)="product(i.subcategory,'men')"><strong>{{ i.subcategory }}</strong></a>
                     <a class="dropdown-item waves-light"  *ngFor="let j of i.subsubcategory;" (click)="product(j.subsubcategory,'men')"> {{ j.subsubcategory }}</a>
@@ -120,7 +120,7 @@
           <div class="md-form my-0">
               <input class="form-control mr-sm-2 p-1" type="text" placeholder=" Search" name="search" ngModel #search>
           </div>
-          <button mdBtn type="submit">search</button>
+          <button type="submit" mdbBtn color="link" mdbWavesEffect class="p0"><i class="fas fa-search"></i></button>
       </form>
 
       <div class="dropdown nav-item" dropdown>
