--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -4,27 +4,42 @@
       <mdb-carousel class="carousel slide carousel-fade mt-2" >
           <mdb-carousel-item>
             <div class="view w-100">
-              <img class="d-block w-100 pro" src="../assets/images/sq1.jpg" alt="First slide">
+              <img class="d-block w-100 pro" src="{{data.image1}}" alt="First slide">
               <div class="mask waves-light" mdbWavesEffect></div>
             </div>
           </mdb-carousel-item>
           <mdb-carousel-item>
             <div class="view w-100">
-              <img class="d-block w-100 pro" src="../assets/images/sq2.jpg" alt="Second slide">
+              <img class="d-block w-100 pro" src="{{data.image2}}" alt="Second slide">
               <div class="mask waves-light" mdbWavesEffect></div>
             </div>
           </mdb-carousel-item>
           <mdb-carousel-item>
             <div class="view w-100">
-              <img class="d-block w-100 pro" src="../assets/images/sq3.jpg" alt="Third slide">
-              <div class="mask waves-light" mdbWavesEffect></div>
+              <img class="d-block w-100 pro" src="{{data.image3}}" alt="Third slide">
+              <div class="mask waves-light"  mdbWavesEffect></div>
             </div>
           </mdb-carousel-item>
         </mdb-carousel>
   </div>
   <div class="col-5" style="margin:0 auto;float: none">
-    <h2>roadster black t-shirt</h2>
+    <h4>{{data.brand}}</h4>
+    <h2>{{data.name}}</h2>
     <hr>
+    <h5>Rs. {{ data.price }}</h5>
+    <p>Additional tax may apply, charged at checkout.</p>
+    <p><strong>Select Size:</strong></p>
+    
+
+
+  <div role="group">
+    <button mdbBtn type="button" color="info" size="lg" mdbWavesEffect>
+      <mdb-icon fas icon="shopping-bag" class="mr-1"></mdb-icon>Buy now
+    </button>
+    <button mdbBtn type="button" color="info" size="lg" mdbWavesEffect (click)="addtocart(data.id)">
+      <mdb-icon fas icon="shopping-cart" class="mr-1" ></mdb-icon>Add to Cart
+    </button>
+  </div>
   </div>
 </div>
 <br>
