--- a/src/app/women/women.component.html
+++ b/src/app/women/women.component.html
@@ -3,19 +3,7 @@
       <mdb-carousel class="carousel slide carousel-fade mt-2"  [animation]="'fade'">
         <mdb-carousel-item>
           <div class="view w-100">
-            <img class="d-block w-100" src="../assets/images/adidas.jpg" alt="First slide">
-            <div class="mask waves-light" mdbWavesEffect></div>
-          </div>
-        </mdb-carousel-item>
-        <mdb-carousel-item>
-          <div class="view w-100">
-            <img class="d-block w-100" src="../assets/images/menss.jpg" alt="Second slide">
-            <div class="mask waves-light" mdbWavesEffect></div>
-          </div>
-        </mdb-carousel-item>
-        <mdb-carousel-item>
-          <div class="view w-100">
-            <img class="d-block w-100" src="../assets/images/adidas.jpg" alt="Third slide">
+            <img class="d-block w-100" src="../assets/images/c1.jpg" alt="First slide">
             <div class="mask waves-light" mdbWavesEffect></div>
           </div>
         </mdb-carousel-item>
@@ -23,7 +11,7 @@
       </div>
   <div class="row mt-5 mb-5">
   <div class="col-3 mt-3 zoom">
-  <mdb-card>
+  <mdb-card (click)="product('clothing','women')">
       <div class="view rgba-white-slight waves-light" mdbWavesEffect>
         <mdb-card-img src="../assets/images/women_clothing.jpg" alt="Card image cap"></mdb-card-img>
         <a>
@@ -40,7 +28,7 @@
     </mdb-card>
   </div>
   <div class="col-3 mt-3 zoom">
-    <mdb-card>
+    <mdb-card (click)="product('footwear','women')">
         <div class="view rgba-white-slight waves-light" mdbWavesEffect>
           <mdb-card-img src="../assets/images/women_footwear.jpg" alt="Card image cap"></mdb-card-img>
           <a>
@@ -58,7 +46,7 @@
       </mdb-card>
     </div>
     <div class="col-3 mt-3 zoom">
-      <mdb-card>
+      <mdb-card (click)="product('cosmetics','women')">
           <div class="view rgba-white-slight waves-light" mdbWavesEffect>
             <mdb-card-img src="../assets/images/women_cosmetics.jpg" alt="Card image cap"></mdb-card-img>
             <a>
