--- a/src/app/sports/sports.component.html
+++ b/src/app/sports/sports.component.html
@@ -12,7 +12,7 @@
   <div class="row mt-5 mb-5" >
   
     <div class="col-3 mt-3 zoom" style="margin:auto">
-      <mdb-card>
+      <mdb-card (click)="product('clothings','sports')">
           <div class="view rgba-white-slight waves-light" mdbWavesEffect>
             <mdb-card-img src="../assets/images/sports_wear.jpg" alt="Card image cap"></mdb-card-img>
             <a>
@@ -30,26 +30,9 @@
         </mdb-card>
       </div>
 
-  <div class="col-3 mt-3 zoom" style="margin:auto">
-    <mdb-card>
-        <div class="view rgba-white-slight waves-light" mdbWavesEffect>
-          <mdb-card-img src="../assets/images/sports_footwear.jpg" alt="Card image cap"></mdb-card-img>
-          <a>
-            <div class="mask"></div>
-          </a>
-        </div>
-        <mdb-card-body>
-          <mdb-card-title>
-            <h4>Footwear</h4>
-          </mdb-card-title>
-      
-      
-          <p class="text-muted">+ Shop Now</p>
-        </mdb-card-body>
-      </mdb-card>
-    </div>
+
     <div class="col-3 mt-3 zoom" style="margin:auto">
-      <mdb-card>
+      <mdb-card (click)="product('equipments','sports')">
           <div class="view rgba-white-slight waves-light" mdbWavesEffect>
             <mdb-card-img src="../assets/images/sports_accessories.jpg" alt="Card image cap"></mdb-card-img>
             <a>
@@ -67,7 +50,7 @@
       </div>
 
       <div class="col-3 mt-3 zoom" style="margin:auto">
-        <mdb-card>
+        <mdb-card (click)="product('fitness products','sports')">
             <div class="view rgba-white-slight waves-light" mdbWavesEffect>
               <mdb-card-img src="../assets/images/sports_equip.jpg" alt="Card image cap"></mdb-card-img>
               <a>
